add styles without general background

--- a/src/app/components/quotes-box/quotes-box.component.html
+++ b/src/app/components/quotes-box/quotes-box.component.html
@@ -1,5 +1,5 @@
 <div>
-    <p>{{quote.quote}}</p>
-    <p>{{quote.author}}</p>
+    <p class="quote">{{quote.quote}}</p>
+    <p class="author">{{quote.author}}</p>
     <app-twitter-button [quote]="quote"></app-twitter-button>
 </div>
