--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-<h1>{{title}}</h1>
-<app-home></app-home>
+<main>
+    <h1>
+        {{title}}
+    </h1>
+    <div>
+        <app-home></app-home>
+    </div>
+</main>
