--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,21 @@
-h1{
-    text-align: center;
+main{
+    min-height: 851px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    justify-content: center;
+
+    h1{
+        text-align: center;
+        margin: 50px auto 0 auto;
+        color: white;
+        text-transform: capitalize;
+        padding: 10px;
+    }
 }
+
+
 
 *{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
