--- a/src/app/components/quotes-box/quotes-box.component.scss
+++ b/src/app/components/quotes-box/quotes-box.component.scss
@@ -1,7 +1,8 @@
 div{
-    background-color: rgba($color: #0CF7BA, $alpha: 0.3);
+    background-color: rgba($color: #0C39F7, $alpha: 0.7);
     padding: 20px 20px 40px 20px;
     border-radius: 20px;
+    color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,5 +17,7 @@ div{
 
     .author{
         text-transform: uppercase;
+        font-size: 20px;
+        font-weight: bold;
     }
 }
